add endpoint to retrieve tenant by slug/name. add test.
